--- a/css/style2.css
+++ b/css/style2.css
@@ -276,11 +276,6 @@ h1 {
         margin-left: 7px;
     }
 }
-h1 {
-    text-align: left;
-    animation-duration: 0.7s;
-    animation-name: slidein1;
-  }
   @media screen and (max-width: 850px) {
     .box1 {
         text-align: left;
@@ -339,13 +334,7 @@ h1 {
     }
     h1 {
         text-align: left;
-        animation-duration: 0.7s;
-        animation-name: slidein1;
     }
-    p {
-        animation-duration: 0.7s;
-        animation-name: slidein;
-      }
       a {
         color:#08f;
         font-size: 9px;
